--- a/src/components/Layout/Layout.css
+++ b/src/components/Layout/Layout.css
@@ -54,3 +54,21 @@ body {
   color: white;
   text-decoration: none;
 }
+
+iframe {
+  outline: none;
+  border: 0;
+}
+
+.iframe {
+  padding-top: 56.25%;
+  position: relative;
+}
+
+.iframe-src {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
