--- a/src/components/Layout/Layout.css
+++ b/src/components/Layout/Layout.css
@@ -1,16 +1,21 @@
-html {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+/* Josh Woodcock - https://www.j0w0.com 👨🏻‍💻🏳️‍🌈 */
+
+@import url('https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css');
+@import url('https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap');
+
+:root {
+  --bs-font-sans-serif: Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  --bs-body-line-height: 1.25;
+  --j0w0-primary: #4d0c73;
 }
 
-body {
-  line-height: 1.5;
+a {
+  color: var(--j0w0-primary);
 }
 
-.container {
-  margin: 0 auto;
-  max-width: 960px;
-  padding: 1.45rem 1.0875rem;
+a:hover {
+  color: var(--bs-pink);
 }
 
 .site {
@@ -23,20 +28,8 @@ body {
   flex: 1;
 }
 
-iframe {
-  outline: none;
-  border: 0;
-}
-
-.iframe {
-  padding-top: 56.25%;
-  position: relative;
-}
-
-.iframe-src {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+.container {
+  margin: 0 auto;
+  max-width: 960px;
+  padding: 1.45rem 1.0875rem;
 }
