--- a/src/components/ProjectCard/ProjectCard.css
+++ b/src/components/ProjectCard/ProjectCard.css
@@ -2,6 +2,10 @@
   width: 100%;
 }
 
+.project:hover a p {
+  text-decoration: underline;
+}
+
 @media screen and (min-width: 768px) {
   .project {
     width: 30%;
@@ -14,9 +18,12 @@
 
 .project p {
   font-weight: 600;
+  margin-bottom: 0;
 }
 
 .project small {
   color: gray;
   font-weight: initial;
+  margin-bottom: 16px;
+  display: block;
 }
