--- a/src/components/ProjectCard/ProjectCard.module.css
+++ b/src/components/ProjectCard/ProjectCard.module.css
@@ -1,27 +1,27 @@
-.project {
+.project-card {
   width: 100%;
 }
 
-.project:hover a p {
-  text-decoration: underline;
-}
-
 @media screen and (min-width: 768px) {
-  .project {
+  .project-card {
     width: 30%;
   }
 }
 
-.project a {
+.project-card:hover a p {
+  text-decoration: underline;
+}
+
+.project-card a {
   text-decoration: none;
 }
 
-.project p {
+.project-card p {
   font-weight: 600;
   margin-bottom: 0;
 }
 
-.project small {
+.project-card small {
   color: gray;
   font-weight: initial;
   margin-bottom: 16px;
