--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -18,3 +18,14 @@ a {
 a:hover {
   color: var(--bs-pink);
 }
+
+iframe {
+  outline: none;
+  border: 0;
+}
+
+.container {
+  margin: 0 auto;
+  max-width: 960px;
+  padding: 1.45rem 1.0875rem;
+}
