--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -24,7 +24,12 @@ iframe {
 }
 
 .container {
-  margin: 0 auto;
-  max-width: 960px;
-  padding: 1.45rem 1.0875rem;
+  padding-top: 1.45rem;
+  padding-bottom: 1.45rem;
+}
+
+.alignleft {
+  float: left;
+  margin-bottom: 1rem;
+  margin-right: 1rem;
 }
